--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
     "jsonwebtoken": "^8.5.1",
+    "quill": "^1.3.7",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "^3.4.0"
